Termino cambiar contraseña con token

--- a/src/main/resources/templates/usuario/linkCambiarContrasena.html
+++ b/src/main/resources/templates/usuario/linkCambiarContrasena.html
@@ -30,7 +30,7 @@
                 <input type="hidden" name="IdUsuario" th:value="${usuario.IdUsuario}">
                 
                  <!-- Agregamos el token -->
-                <input type="hidden" name="token" th:value="${token.token}">
+                <input type="hidden" name="token" th:value="${token}">
                 <div class="center">
                     <div class="w50 mrt-10">
                         <h3 class="center mrt-30">Cambiar Contraseña</h3>
