--- a/src/main/resources/templates/usuario/templateUsuario.html
+++ b/src/main/resources/templates/usuario/templateUsuario.html
@@ -75,7 +75,7 @@
 
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
-                                    <a class="black" th:href="@{/usuario/editar/{id} (id=${usuario.IdUsuario}) }">
+                                    <a class="black" th:href="@{/usuario/editar}">
                                         <div class="dos-columnas">
                                             <div>
                                                 <img class="w20" th:src="@{/iconos/sobre-nosotros-negro.png}"
@@ -92,7 +92,7 @@
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
                                     <a class="black"
-                                        th:href="@{/usuario/cambiarContrasena/{id} (id=${usuario.IdUsuario}) }">
+                                        th:href="@{/usuario/cambiarContrasena}">
                                         <div class="dos-columnas">
                                             <div>
                                                 <img class="w20" th:src="@{/iconos/contrasena.png}" alt="usuario">
