Agrego tarjeta estirada de usuarios en Administrador usuarios.html

--- a/src/main/resources/templates/usuario/templateUsuario.html
+++ b/src/main/resources/templates/usuario/templateUsuario.html
@@ -232,10 +232,10 @@
                                     <a th:href="@{/administrador/usuarios}">
                                         <div class="dos-columnas">
                                             <div>
-                                                <img class="w20" th:src="@{/iconos/mis-compras.png}" alt="compras">
+                                                <img class="w20" th:src="@{/iconos/sobre-nosotros-negro.png}" alt="usuarios">
                                             </div>
                                             <div class="w-150 mrt-10">
-                                                <p>Mis Compras</p>
+                                                <p>Usuarios</p>
                                             </div>
                                         </div>
                                     </a>
