--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -199,7 +199,7 @@ body {
     width: 250px;
     height: 50px;
     background-color: #f73535d6;
-    color:#fff;
+    color: #fff;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -221,7 +221,7 @@ body {
     width: 250px;
     height: 50px;
     background-color: #13ad13d6;
-    color:#fff;
+    color: #fff;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -233,8 +233,10 @@ body {
     0% {
         opacity: 1;
     }
+
     100% {
-        display: none; /* Oculta el elemento completamente */
+        display: none;
+        /* Oculta el elemento completamente */
     }
 }
 
@@ -262,6 +264,17 @@ a {
     width: 100%;
 }
 
+.w-90 {
+    width: 90%;
+}
+
+.w-30 {
+    width: 30%;
+}
+
+.w-70 {
+    width: 70%;
+}
 
 /* Estilos Registro */
 
@@ -540,6 +553,10 @@ a {
     height: 90%;
 }
 
+.h-150 {
+    height: 150px;
+}
+
 .mr-10 {
     margin-right: 10px;
 }
@@ -606,3 +623,49 @@ a {
     color: #000;
 }
 
+/* Enlace Estirado */
+
+.cont-enlace-estirado {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.enlace-estirado {
+    display: grid;
+    grid-template-columns: 25% 75%;
+    width: 90vw;
+    height: 200px;
+    border-radius: 10px;
+    overflow: hidden;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.card-foto {
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-foto img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-top: 30px;
+}
+
+.dos-columnas {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.titulo {
+    font-family: 'Arial Narrow Bold', sans-serif;
+}
+
+.interlineado {
+    line-height: 0.2;
+}
