--- a/src/main/resources/templates/administrador/usuarios.html
+++ b/src/main/resources/templates/administrador/usuarios.html
@@ -18,17 +18,61 @@
 
     <!-- Main -->
     <main>
+        <br>
+        <h1 class="center">Usuarios Registrados</h1>
 
-        <h1>Usuarios Registrados</h1>
+        <!-- Usuario con Enlace Estirado -->
+
+        <div class="cont-enlace-estirado mrt-30 mrb-30">
+            <div class="card border enlace-estirado" th:each="usuario:${usuarios}" id="buscar">
+                <div class="card-foto center">
+                    <img th:src="@{/images/{img} (img=${usuario.foto})}" alt="foto-usuario">
+                    <h6 class="mrt-30" th:text="${usuario.rol}"></h6>
+                </div>
+                <div class="card-contenido">
+                    <h5 class="titulo" th:text="${usuario.nombre} +' '+ ${usuario.apellido}"></h5>
+                    <p class="interlineado" th:text="${usuario.email}"></p>
+                    <div class="dos-columnas">
+                        <h6 class="" th:text="'Documento: ' + ${usuario.documento}">
+                        </h6>
+                        <h6 class="" th:text="'Teléfono: ' + ${usuario.telefono}"></h6>
+                    </div>
+                    <div class="dos-columnas">
+                        <h6 class=""
+                            th:text="'Dirección: ' + ${usuario.direccion} + ' ' + ${usuario.altura} + ' ' + ${usuario.piso} + ' ' + ${usuario.depto} + ' Localidad: ' + ${usuario.localidad}">
+                        </h6>
+                        <h6 class="" th:text="'Provincia: ' + ${usuario.provincia}"></h6>
+                    </div>
+
+                    <div class="dos-columnas center">
+                        <div class="w-150">
+                            <a class="btn btn-danger" style="color: white;"
+                                th:href="@{/administrador/bloquearUsuario/{id} (id=${usuario.IdUsuario}) }">
+                                <img class="w25" th:src="@{/iconos/bloquear.png}" alt="bloquear"> Bloquear
+
+                            </a>
+                        </div>
+                        <div class="w-150">
+                            <a class="btn btn-dark" style="color: white;"
+                                th:href="@{/administrador/bloquearUsuario/{id} (id=${usuario.IdUsuario}) }">
+                                <img class="w25" th:src="@{/iconos/actualizar.png}" alt="bloquear"> Cambiar Rol
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Fin Usuario con Enlace Estirado -->
 
     </main>
 
-
     <!-- Footer -->
-    <div th:insert="~{usuario/templateUsuario.html::footer-admin}"></div>
-    
+    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer-admin}"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
