--- a/src/main/resources/templates/administrador/cambiarRol.html
+++ b/src/main/resources/templates/administrador/cambiarRol.html
@@ -90,7 +90,7 @@
                     <div class="formulario-grupo" id="grupo-telefono">
                         <label for="telefono" class="formulario-label">Teléfono</label>
                         <div class="formulario-grupo-input">
-                            <input type="text" class="formulario-input border" id="telefono" name="telefono" required
+                            <input type="text" class="formulario-input border" id="telefono" name="telefono"
                                 placeholder="Ingrese Número de Teléfono" autocomplete="off"
                                 th:value="${usuario.telefono}">
                         </div>
