--- a/src/main/resources/templates/recepcion/homeRecepcionista.html
+++ b/src/main/resources/templates/recepcion/homeRecepcionista.html
@@ -8,14 +8,14 @@
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link th:href="@{css/estilos.css}" rel="stylesheet">
+    <link th:href="@{/css/estilos.css}" rel="stylesheet">
 </head>
 
 <body>
 
     <!-- Header -->
-    <div th:insert="~{usuario/templateUsuario.html::header-inicial}" th:if="${sesion==null}"></div>
-    <div th:insert="~{usuario/templateUsuario.html::header-user}" th:unless="${sesion==null}"></div>
+    <div th:insert="~{usuario/templateUsuario.html::header-recepcion}" th:unless="${sesion==null}"></div>
+    
 
     <!-- Main -->
     <main>
@@ -29,7 +29,7 @@
 
 
     <!-- Footer -->
-    <div th:insert="~{usuario/templateUsuario.html::footer-user}"></div>
+    <div th:insert="~{usuario/templateUsuario.html::footer-recepcion}"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
