Agrego altaCliente.html y controladorRecepcion: guardarCliente

--- a/src/main/resources/templates/recepcion/templateRecepcion.html
+++ b/src/main/resources/templates/recepcion/templateRecepcion.html
@@ -8,7 +8,7 @@
                 </a>
             </div>
             <div class="menu-header">
-                <a th:href="@{/usuario/equipos}"><img class="icono-header" th:src="@{/iconos/agregar-cliente-blanco.png}"
+                <a th:href="@{/recepcion/altaCliente}"><img class="icono-header" th:src="@{/iconos/agregar-cliente-blanco.png}"
                         alt="agregar-cliente-blanco">
                     Alta Cliente
                 </a>
