--- a/src/main/resources/templates/clientes/alta.html
+++ b/src/main/resources/templates/clientes/alta.html
@@ -24,23 +24,167 @@
             <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
         </div>
 
-        <div class="contenedor-seccion">
-            <div class="seccion-img">
-                <img src="/imagenes/recepcionista.jpg" alt="recepcionista">
-            </div>
-            <div class="seccion-texto">
-                <h1>Alta Cliente</h1>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nisi fuga eligendi maxime nemo ex
-                    quam error molestias totam. Perferendis eius accusantium error assumenda nisi odit incidunt qui aut
-                    quasi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo eum ex, voluptates
-                    consequuntur voluptatum ad architecto rerum magnam vel deleniti impedit alias quibusdam facilis
-                    officiis. </p>
-                <br>
-                <p> Maxime ea
-                    consectetur minima molestias perspiciatis rem adipisci error enim repellendus quae inventore eum
-                    possimus magni earum architecto, repellat suscipit impedit. Animi!</p>
-            </div>
+        <div class="contenedor-img-iniciarSesion">
+            <img class="img-iniciarSesion" th:src="@{/iconos/agregar-cliente-blanco.png}" alt="alta-cliente">
+        </div>
+
+        <h1 class="center mrt-30">Alta Cliente</h1>
+
+        <div class="contenedor-formulario">
+
+            <form id="formulario" th:action="@{/recepcion/guardarCliente}" method="post"
+                enctype="multipart/form-data">
+
+                <!-- Grupo: Foto Perfil -->
+                <div class="formulario-grupo" id="grupo-foto">
+                    <label class="formulario-label" for="img">Foto: (opcional)</label>
+                    <div class="formulario-grupo-input">
+                        <div class="w100 center mrt-10">
+                            <label for="img" class="btn btn-dark"><img class="w25 mr-10"
+                                    th:src="@{/iconos/felicidad.png}" alt="felicidad">
+                                Subí tu foto</label>
+                        </div>
+                        <div class="oculto">
+                            <input type="file" class="form-control-file btn" id="img" name="img">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="formulario mrt-10">
+
+                    <!-- Grupo: Nombre -->
+                    <div class="formulario-grupo" id="grupo-nombre">
+                        <label for="nombre" class="formulario-label">Nombre</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input" name="nombre" id="nombre" placeholder="Nombre"
+                                required>
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">El Nombre tiene que ser de 4 a 16 dígitos.</p>
+                    </div>
+
+                    <!-- Grupo: Apellido -->
+                    <div class="formulario-grupo" id="grupo-apellido">
+                        <label for="apellido" class="formulario-label">Apellido</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input" name="apellido" id="apellido"
+                                placeholder="Apellido" required>
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">El Apellido tiene que ser de 4 a 16 dígitos.</p>
+                    </div>
+
+                    <!-- Grupo: Documento -->
+                    <div class="formulario-grupo" id="grupo-documento">
+                        <label for="apellido" class="formulario-label">DNI / CI / Pasaporte / Otro</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input" name="documento" id="documento"
+                                placeholder="Documento">
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">El Documento tiene que ser de 7 a 8 dígitos.</p>
+                    </div>
+
+                    <!-- Grupo: Teléfono -->
+                    <div class="formulario-grupo" id="grupo-telefono">
+                        <label for="apellido" class="formulario-label">Télefono</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input" name="telefono" id="telefono"
+                                placeholder="Telefono" required>
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">El Télefono tiene que ser de 8 a 16 dígitos.</p>
+                    </div>
+
+                    <!-- Grupo: Correo Electronico -->
+                    <div class="formulario-grupo" id="grupo-email">
+                        <label for="email" class="formulario-label">e-mail</label>
+                        <div class="formulario-grupo-input">
+                            <input type="email" class="formulario-input" name="email" id="email"
+                                placeholder="correo@correo.com" required>
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">El e-mail solo puede contener letras, numeros, puntos, guiones
+                            y
+                            guion bajo.</p>
+                    </div>
+
+                    <!-- Grupo: Calle -->
+                    <div class="formulario-grupo" id="grupo-direcccion">
+                        <label for="direcccion" class="formulario-label">Calle</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input" name="direcccion" id="direcccion"
+                                placeholder="Direcccion" required>
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">El Direcccion tiene que ser de 4 a 16 dígitos.</p>
+                    </div>
+
+                    <!-- Grupo: Nro -->
+                    <div class="formulario-grupo" id="grupo-altura">
+                        <label for="altura" class="formulario-label">Altura</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input" name="altura" id="altura" placeholder="Altura"
+                                required>
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">La altura tiene que ser de 1 a 5 dígitos.</p>
+                    </div>
+
+                    <!-- Grupo: Piso -->
+                    <div class="formulario-grupo" id="grupo-piso">
+                        <label for="piso" class="formulario-label">Piso</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input" name="piso" id="piso" placeholder="Piso"
+                                required>
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">El piso tiene que ser de 1 a 2 dígitos.</p>
+                    </div>
+
+                    <!-- Grupo: Depto -->
+                    <div class="formulario-grupo" id="grupo-depto">
+                        <label for="depto" class="formulario-label">Depto</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input" name="depto" id="depto" placeholder="Depto"
+                                required>
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">El depto tiene que ser de 1 a 2 dígitos.</p>
+                    </div>
+
+                    <!-- Grupo: Localidad -->
+                    <div class="formulario-grupo" id="grupo-localidad">
+                        <label for="localidad" class="formulario-label">Localidad</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input" name="localidad" id="localidad"
+                                placeholder="Localidad" required>
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">La localidad tiene que ser de 1 a 2 dígitos.</p>
+                    </div>
+
+                    <!-- Grupo: Provincia -->
+                    <div class="formulario-grupo" id="grupo-provincia">
+                        <label for="provincia" class="formulario-label">Provincia</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input" name="provincia" id="provincia"
+                                placeholder="Provincia" required>
+                            <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        </div>
+                        <p class="formulario-input-error">La provincia tiene que ser de 1 a 2 dígitos.</p>
+                    </div>
+
+                </div>
+
+                <div class="col-sm-12 center mrt-30">
+                    <a class="btn btn-secondary mr-30" th:href="@{/recepcion/homeRecepcion}"><img class="w25"
+                            th:src="@{/iconos/cancelar.png}" alt="cancelar"> Cancelar</a>
+                    <button type="submit" class="btn btn-dark ml10"><img class="w25" th:src="@{/iconos/guardar.png}"
+                            alt="guardar"> Guardar Cambios</button>
+                </div>
+            </form>
+
         </div>
 
 
@@ -48,7 +192,7 @@
 
 
     <!-- Footer -->
-    <div th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}"></div>
+    <div class="mrt-30" th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
