--- a/src/main/resources/templates/recepcion/templateRecepcion.html
+++ b/src/main/resources/templates/recepcion/templateRecepcion.html
@@ -12,7 +12,7 @@
                         alt="agregar-cliente-blanco">
                     Alta Cliente
                 </a>
-                <a th:href="@{/usuario/reparaciones}"><img class="icono-header" th:src="@{/iconos/clientes-blanco.png}"
+                <a th:href="@{/recepcion/clientes}"><img class="icono-header" th:src="@{/iconos/clientes-blanco.png}"
                         alt="clientes-blanco">
                     Clientes
                 </a>
