--- a/src/main/resources/templates/recepcion/templateRecepcion.html
+++ b/src/main/resources/templates/recepcion/templateRecepcion.html
@@ -16,10 +16,14 @@
                         alt="clientes-blanco">
                     Clientes
                 </a>
-                <a th:href="@{/usuario/compras}"><img class="icono-header" th:src="@{/iconos/agregar-equipo-blanco.png}"
+                <a th:href="@{/equipo/altaEquipo}"><img class="icono-header" th:src="@{/iconos/agregar-equipo-blanco.png}"
                         alt="agregar-equipo-blanco">
                     Alta Equipo
                 </a>
+                <a th:href="@{/equipo/equipos}"><img class="icono-header" th:src="@{/iconos/computacion.png}"
+                    alt="agregar-equipo-blanco">
+                Ver Equipos
+            </a>
                 <a th:href="@{/usuario/Perfil}"><img class="icono-header" th:src="@{/iconos/reparacion.png}" alt="reparacion">
                     Reparaciones
                 </a>
