--- a/src/main/resources/templates/equipos/altaEquipo.html
+++ b/src/main/resources/templates/equipos/altaEquipo.html
@@ -91,9 +91,9 @@
                         </div>
                     </div>
 
-                    <!-- Grupo: Nro de Serie -->
+                    <!-- Grupo: Nro de Producto -->
                     <div class="formulario-grupo" id="grupo-nombre">
-                        <label for="nroSerie" class="formulario-label">N° de Producto</label>
+                        <label for="nroProducto" class="formulario-label">N° de Producto</label>
                         <div class="formulario-grupo-input">
                             <input type="text" class="formulario-input" name="nroProducto" id="nroProducto"
                                 placeholder="N° de Producto">
