--- a/src/main/resources/templates/recepcion/templateRecepcion.html
+++ b/src/main/resources/templates/recepcion/templateRecepcion.html
@@ -8,23 +8,24 @@
                 </a>
             </div>
             <div class="menu-header">
-                <a th:href="@{/recepcion/altaCliente}"><img class="icono-header" th:src="@{/iconos/agregar-cliente-blanco.png}"
-                        alt="agregar-cliente-blanco">
+                <a th:href="@{/recepcion/altaCliente}"><img class="icono-header"
+                        th:src="@{/iconos/agregar-cliente-blanco.png}" alt="agregar-cliente-blanco">
                     Alta Cliente
                 </a>
                 <a th:href="@{/recepcion/clientes}"><img class="icono-header" th:src="@{/iconos/clientes-blanco.png}"
                         alt="clientes-blanco">
                     Clientes
                 </a>
-                <a th:href="@{/equipo/altaEquipo}"><img class="icono-header" th:src="@{/iconos/agregar-equipo-blanco.png}"
-                        alt="agregar-equipo-blanco">
+                <a th:href="@{/equipo/altaEquipo}"><img class="icono-header"
+                        th:src="@{/iconos/agregar-equipo-blanco.png}" alt="agregar-equipo-blanco">
                     Alta Equipo
                 </a>
                 <a th:href="@{/equipo/equipos}"><img class="icono-header" th:src="@{/iconos/computacion.png}"
-                    alt="agregar-equipo-blanco">
-                Ver Equipos
-            </a>
-                <a th:href="@{/usuario/Perfil}"><img class="icono-header" th:src="@{/iconos/reparacion.png}" alt="reparacion">
+                        alt="agregar-equipo-blanco">
+                    Equipos
+                </a>
+                <a th:href="@{/usuario/Perfil}"><img class="icono-header" th:src="@{/iconos/reparacion.png}"
+                        alt="reparacion">
                     Reparaciones
                 </a>
                 <!-- Usuario con dropdown -->
@@ -70,8 +71,7 @@
 
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
-                                    <a class="black"
-                                        th:href="@{/recepcion/cambiarContrasena}">
+                                    <a class="black" th:href="@{/recepcion/cambiarContrasena}">
                                         <div class="dos-columnas">
                                             <div>
                                                 <img class="w20" th:src="@{/iconos/contrasena.png}" alt="usuario">
