Saco verificacion de equipo duplicado

--- a/src/main/resources/templates/equipos/altaEquipo.html
+++ b/src/main/resources/templates/equipos/altaEquipo.html
@@ -59,8 +59,8 @@
                     <div class="formulario-grupo" id="grupo-nombre">
                         <label for="marca" class="formulario-label">Marca</label>
                         <div class="formulario-grupo-input">
-                            <input type="text" class="formulario-input" name="marca" id="marca"
-                                placeholder="Marca" required>
+                            <input type="text" class="formulario-input" name="marca" id="marca" placeholder="Marca"
+                                required>
                         </div>
                     </div>
 
