--- a/src/main/resources/templates/recepcion/templateRecepcion.html
+++ b/src/main/resources/templates/recepcion/templateRecepcion.html
@@ -9,22 +9,22 @@
             </div>
             <div class="menu-header">
                 <a th:href="@{/recepcion/altaCliente}"><img class="icono-header"
-                        th:src="@{/iconos/agregar-cliente-blanco.png}" alt="agregar-cliente-blanco">
+                        th:src="@{/iconos/agregar-usuario.png}" alt="agregar-usuario">
                     Alta Cliente
                 </a>
-                <a th:href="@{/recepcion/clientes}"><img class="icono-header" th:src="@{/iconos/clientes-blanco.png}"
+                <a th:href="@{/recepcion/clientes}"><img class="icono-header" th:src="@{/iconos/grupo5.png}"
                         alt="clientes-blanco">
                     Clientes
                 </a>
                 <a th:href="@{/equipo/altaEquipo}"><img class="icono-header"
-                        th:src="@{/iconos/agregar-equipo-blanco.png}" alt="agregar-equipo-blanco">
+                        th:src="@{/iconos/alta-equipo.png}" alt="alta-equipo">
                     Alta Equipo
                 </a>
-                <a th:href="@{/equipo/equipos}"><img class="icono-header" th:src="@{/iconos/computacion.png}"
-                        alt="agregar-equipo-blanco">
+                <a th:href="@{/equipo/equipos}"><img class="icono-header" th:src="@{/iconos/equipos.png}"
+                        alt="equipos">
                     Equipos
                 </a>
-                <a th:href="@{/usuario/Perfil}"><img class="icono-header" th:src="@{/iconos/reparacion.png}"
+                <a th:href="@{/usuario/Perfil}"><img class="icono-header" th:src="@{/iconos/reparaciones.png}"
                         alt="reparacion">
                     Reparaciones
                 </a>
