--- a/src/main/resources/templates/clientes/mostrar.html
+++ b/src/main/resources/templates/clientes/mostrar.html
@@ -51,19 +51,19 @@
                         <div class="">
                             <!-- Formulario para editar cliente -->
                             <form th:action="@{/recepcion/editarCliente}" method="post" style="display: inline;">
-                                <input type="hidden" name="id" th:value="${cliente.IdCliente}">
+                                <input type="hidden" name="clienteid" th:value="${cliente.IdCliente}">
                                 <button type="submit" class="btn btn-dark" style="color: white;">
                                     <img class="w25" th:src="@{/iconos/actualizar.png}" alt="editar"> Editar
                                 </button>
                             </form>
 
                             <!-- Formulario para alta equipo -->
-                            <!-- <form th:action="@{/recepcion/altaEquipo}" method="post" style="display: inline;">
-                                <input type="hidden" name="id" th:value="${cliente.IdCliente}">
+                            <form th:action="@{/equipo/altaEquipo}" method="post" style="display: inline;">
+                                <input type="hidden" name="clienteId" th:value="${cliente.IdCliente}">
                                 <button type="submit" class="btn btn-dark" style="color: white;">
                                     <img class="w25" th:src="@{/iconos/alta.png}" alt="alta"> Alta Equipo
                                 </button>
-                            </form> -->
+                            </form>
                             <!-- <a class="btn btn-dark" style="color: white;" th:href="@{/recepcion/altaEquipo}"><img
                                     class="w25" th:src="@{/iconos/alta.png}" alt="alta">
                                 Alta Equipo
